--- a/Архитектура.md
+++ b/Архитектура.md
@@ -1,3 +1,16 @@
 # Архитектура программного комплекса
 
+Программный комплекс предназначен для визуального представления социального графа, анализа графов различных пользователей, автоматизированного размещения вершин и связей между вершинами.
+
+## Составляющие программного комплекса
+
+1. Модуль преобразования данных из источника (загрузка данных)
+2. Модуль алгоритмов анализа(анализ общих интересов. предложение дружбы по интересам)
+3. Модуль авторазмещения(обновление графа)
+4. Модуль визуализации графов
+5. Хранилище графов
+6. Хранилище визуализации графов
+
+## 
+
 
