--- a/Архитектура.md
+++ b/Архитектура.md
@@ -11,6 +11,22 @@
 5. Хранилище графов
 6. Хранилище визуализации графов
 
-## 
+### Загрузка данных
+Из источников (таблицы Excel, реляционные БД, текстовые документы) извлекаются структурированные данные, которые преобразуются в граф и сохраняютс в файловой системе хранилища графов.
+
+### Анализ графов
+Реализуется алгоритм выделения подграфов из графа на основе поисков в ширину и на заданную глубину от вершины заданного пользователя.
+Также возможно выделять подграфы по заданным фильтрам, обьединения и пересечения графов.
+
+### Обновление графа
+Пусть V - множество вершин графа, E - множество ребер графа
+Асимптотика:
+> Добавление связи: O(log(E));
+> Удаление связи: O(log(E));
+> Поиск связи: O(log(E));
+> Добавление вершины: O(log(V));
+> Удаление вершины: O(log(V));
+> Поиск вершины: O(log(V)).
+
 
 
