--- a/Архитектура.md
+++ b/Архитектура.md
@@ -20,6 +20,9 @@
 
 ### Обновление графа
 Пусть V - множество вершин графа, E - множество ребер графа
+
+Все вершины и свзи хранятся в сбалансированных деревьях поиска, поэтому оценки времени работы имеют логарифмическую сложность
+
 Асимптотика:
 > Добавление связи: O(log(E));
 
@@ -32,6 +35,12 @@
 > Удаление вершины: O(log(V));
 
 > Поиск вершины: O(log(V)).
+
+### Хранение графов
+Имеется 2 режима хранения графа:
+> Базовое хранение (хранение графов большого размера);
+
+> Локальное хранение (хранение подграфов, полученных запросами к базовым графам).
 
 
 
