--- a/Архитектура.md
+++ b/Архитектура.md
@@ -43,4 +43,32 @@
 > Локальное хранение (хранение подграфов, полученных запросами к базовым графам).
 
 
+## Сущности
+# Сущность-вершина для пользователя
+|Vertex-user |
+|------------|
+|id     	 |
+|Name   	 |
+|data 		 |
+
+# Сущность-вершина для видео
+|Vertex-video|
+|------------|
+|id     	   |
+|Title   	   |
+|Claster	   |
+
+# Сущность-ребро 
+|edge	|
+|-----|
+|id   |
+|type   |
+|date 	|
+
+# Виды типов для ребра
+* пользователь-видео
+* пользователь-пользователь
+* видео-видео
+
+
 
