--- a/Архитектура.md
+++ b/Архитектура.md
@@ -44,21 +44,21 @@
 
 
 ## Сущности
-# Сущность-вершина для пользователя
+### Сущность-вершина для пользователя
 |Vertex-user |
 |------------|
 |id     	 |
 |Name   	 |
 |data 		 |
 
-# Сущность-вершина для видео
+### Сущность-вершина для видео
 |Vertex-video|
 |------------|
 |id     	   |
 |Title   	   |
 |Claster	   |
 
-# Сущность-ребро 
+### Сущность-ребро 
 |edge	|
 |-----|
 |id   |
