--- a/Архитектура.md
+++ b/Архитектура.md
@@ -65,7 +65,7 @@
 |type   |
 |date 	|
 
-# Виды типов для ребра
+### Виды типов для ребра
 * пользователь-видео
 * пользователь-пользователь
 * видео-видео
