--- a/Архитектура.md
+++ b/Архитектура.md
@@ -21,7 +21,7 @@
 ### Обновление графа
 Пусть V - множество вершин графа, E - множество ребер графа
 
-Все вершины и свзи хранятся в сбалансированных деревьях поиска, поэтому оценки времени работы имеют логарифмическую сложность
+Все вершины и связи хранятся в сбалансированных деревьях поиска, поэтому оценки времени работы имеют логарифмическую сложность
 
 Асимптотика:
 > Добавление связи: O(log(E));
