--- a/Архитектура.md
+++ b/Архитектура.md
@@ -98,3 +98,8 @@
 |параметр|
 |---------|
 |list_video|
+
+## Проблемы
+быстрый подбор рекомендаций
+логрование измений, и быстрая отдача данных сторонним сервсам
+
