--- a/Архитектура.md
+++ b/Архитектура.md
@@ -36,6 +36,11 @@
 
 > Поиск вершины: O(log(V)).
 
+### Оптимизации
+
+Использование собственной файловой системы обеспечит отсутствие дополнительных системных вызовов при работе
+с хранилищем. Таким образомт ускорим процесс организации хранения данных
+
 ### Хранение графов
 Имеется 2 режима хранения графа:
 > Базовое хранение (хранение графов большого размера);
