--- a/Архитектура.md
+++ b/Архитектура.md
@@ -2,7 +2,11 @@
 
 Программный комплекс предназначен для визуального представления социального графа, анализа графов различных пользователей, автоматизированного размещения вершин и связей между вершинами.
 
+
 ## Составляющие программного комплекса
+![atl-text]
+[logo](https://github.com/erofeevskiy-ia/Techno_DB_NOSQL/blob/master/Архитектура.png)
+
 
 1. Модуль преобразования данных из источника (загрузка данных)
 2. Модуль алгоритмов анализа(анализ общих интересов. предложение дружбы по интересам)
@@ -10,6 +14,8 @@
 4. Модуль визуализации графов
 5. Хранилище графов
 6. Хранилище визуализации графов
+
+
 
 ### Загрузка данных
 Из источников (таблицы Excel, реляционные БД, текстовые документы) извлекаются структурированные данные, которые преобразуются в граф и сохраняютс в файловой системе хранилища графов.
