--- a/Архитектура.md
+++ b/Архитектура.md
@@ -4,8 +4,7 @@
 
 
 ## Составляющие программного комплекса
-![atl-text]
-[logo](https://github.com/erofeevskiy-ia/Techno_DB_NOSQL/blob/master/Архитектура.png)
+![atl text](https://github.com/erofeevskiy-ia/Techno_DB_NOSQL/blob/master/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%B0.PNG?raw=true)
 
 
 1. Модуль преобразования данных из источника (загрузка данных)
